--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "cSpell.words": [
-        "mispredicted"
-    ],
-    "cSpell.enabled": false
+        "mispredicted",
+        "superkey"
+    ]
 }
