--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,12 @@
 {
     "cSpell.words": [
+        "Binomialtabelle",
         "mispredicted",
         "superkey",
-        "uncurry"
-    ]
+        "Teststatistikwerte",
+        "uncurry",
+        "Verwerfungsbereich",
+        "Verwerfungsbereiche"
+    ],
+    "cSpell.language": "en,ge-R,de-DE"
 }
