--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.words": [
+        "BCNF",
         "Binomialtabelle",
+        "mathjax",
         "mispredicted",
+        "serializability",
         "superkey",
         "Teststatistikwerte",
         "uncurry",
