--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,10 @@
     "spellright.language": [],
     "spellright.documentTypes": [
         "plaintext"
+    ],
+    "cSpell.ignoreWords": [
+        "hopfield",
+        "modulatable",
+        "presynaptic"
     ]
 }
